--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsc --watch",
-    "dev:debug": "node --watch --inspect dist/index.js",
+    "dev": "tsx watch src/index.ts",
+    "dev:build": "tsc --watch",
+    "dev:debug": "tsx watch --inspect src/index.ts",
     "debug": "node --inspect dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -47,6 +48,7 @@
     "prettier": "^3.6.2",
     "semantic-release": "^25.0.2",
     "ts-jest": "^29.4.5",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
