--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
