feat: add various tools and update index exports

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -14,7 +14,7 @@
   "importOrderSeparation": false,
   "importOrderSortSpecifiers": true,
   "importOrderCaseInsensitive": true,
-  "importOrder": [",<THIRD_PARTY_MODULES>", ",^@core/(.*)$", ",^@decorators/(.*)$", ",^@features/(.*)$", ",^@mocks/(.*)$", ",^@services/(.*)$", ",^@shared/(.*)$", ",^@test/(.*)$", ",^[./]"],
+  "importOrder": ["<THIRD_PARTY_MODULES>", "^@core/(.*)$", "^@decorators/(.*)$", "^@features/(.*)$", "^@mocks/(.*)$", "^@services/(.*)$", "^@shared/(.*)$", "^@test/(.*)$", "^[./]"],
   "overrides": [
     {
       "files": "*.json",
