--- a/package.json
+++ b/package.json
@@ -31,15 +31,25 @@
   "license": "ISC",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.0",
+    "@langchain/anthropic": "^1.1.3",
+    "@langchain/core": "^1.1.0",
+    "@langchain/langgraph": "^1.0.2",
+    "@langchain/openai": "^1.1.3",
+    "@modelcontextprotocol/sdk": "^1.23.0",
+    "@modelcontextprotocol/server-github": "^2025.4.8",
     "@pinecone-database/pinecone": "^6.1.3",
     "@vitalets/google-translate-api": "^9.2.1",
     "axios": "^1.13.2",
+    "canvas": "^3.2.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "googleapis": "^166.0.0",
+    "langchain": "^1.1.1",
+    "mongodb": "^7.0.0",
+    "node-cron": "^4.2.1",
     "node-telegram-bot-api": "^0.66.0",
     "openai": "^6.9.1",
     "telegram": "^2.26.22",
@@ -54,6 +64,7 @@
     "@types/express": "^5.0.5",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
+    "@types/node-telegram-bot-api": "^0.64.13",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "eslint": "^9.39.1",
