--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "lib": ["ES2022"],
     "outDir": "./dist",
     "rootDir": "./src",
-    "strict": true,
+    "strict": false,
+    "strictNullChecks": false,
+    "strictBindCallApply": false,
     "noImplicitAny": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -15,9 +17,9 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": "./",
     "paths": {
